fixed up some picture spacing

--- a/sosite/styles/style.css
+++ b/sosite/styles/style.css
@@ -49,7 +49,7 @@ main{
 }
 #first{
     display: grid;
-    grid-template-columns: 1fr 2fr;
+    grid-template-columns: 2fr 3fr;
     grid-template-rows: auto auto;
     margin-bottom: 20px;
     background:#8791b1;
@@ -71,9 +71,9 @@ section1 h1{
 }
 
 .pic1{
-    max-width: 95%;
+    max-width: 100%;
     align-self: center;
-    margin-left: 20px;
+    margin: auto;
 }
 #second{
     display: grid;
